# TrackForge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_rejected_status.py  0003_add_app_settings.py  0004_add_pending_review_status.py  0005_cascade_acquisition_jobs.py  0006_add_releases.py
backend/trackforge/: auth.py  cache.py  config.py  database.py  main.py
backend/trackforge/adapters/acquisition/: nzbget.py  prowlarr.py  slskd.py
backend/trackforge/adapters/metadata/: fanart.py  listenbrainz.py  musicbrainz.py  preview.py
backend/trackforge/adapters/notifications/: discord.py
backend/trackforge/api/: deps.py
backend/trackforge/api/v1/: auth.py  library.py  requests.py  review.py  router.py  search.py  settings.py  trending.py  users.py
backend/trackforge/db/: models.py
backend/trackforge/domain/services/: acquisition_service.py  import_service.py  jellyfin_sync_service.py  match_scoring.py  notification_service.py  processing_service.py  request_service.py  review_service.py  settings_service.py  trait_parser.py
backend/trackforge/worker/: settings.py  tasks.py
frontend/: nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  library.ts  requests.ts  review.ts  search.ts  settings.ts  trending.ts  users.ts
frontend/src/components/: AuthProvider.tsx  GlobalPlayer.tsx  (+1 more)
(+11 files in other folders)
